# htmx-tags

./: .gitignore  .pre-commit-config.yaml  .vscodeignore  Justfile  README.md  build-data.py  eslint.config.mjs  html.htmx-data.json  justfile  package-lock.json  package.json  prek.toml  pyproject.toml  ruff.toml  tsconfig.json  ty.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  development.md  index.md  installation.md  release.md  troubleshooting.md
src/: extension.ts
tests/: test_build_data.py  test_extension_manifest.py
